--- a/attorneys.html
+++ b/attorneys.html
@@ -19,15 +19,15 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./assets/images/FAVI.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favi24.ico" />
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-white sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html#">
+        <a class="navbar-brand" href="#">
           <img
-            src="./assets/images/logo-mid.png"
+            src="./assets/images/AVL-LOGO-LightCamel.png"
             alt="logo"
             width="100%"
             id="logo"
@@ -53,18 +53,18 @@
               <a class="nav-link" href="./index.html#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./index.html#speakers">Legal Team</a>
+              <a class="nav-link" href="./index.html#speakers">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./index.html#offerings">Practice </a>
             </li>
-            <!-- 
-            <li class="nav-item">
+
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#reviews">Reviews</a>
             </li> -->
-            <!-- 
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html#news">News</a>
+
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="#news">News</a>
             </li> -->
           </ul>
           <a href="#contact" class="btn btn-brand ms-lg-3">Contact</a>
@@ -258,16 +258,16 @@
     </section>
 
     <!-- footer -->
-    <footer class="bg-dark">
+    <footer class="footer-cont">
       <div class="footer-top">
         <div class="container">
           <div class="row gy-5">
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 special-foot">
               <a href="#">
-                <img src="./assets/images/logo-mid.png" alt="" />
+                <img src="./assets/images/AVL-LOGO-LightCamel.png" alt="" />
               </a>
-              <div class="line bg-white"></div>
-              <p>ASPEN VALLEY LAW</p>
+              <div class="line special"></div>
+              <p>NEILEY & MORRIS</p>
               <div class="social-icons">
                 <a href="#">
                   <i class="ri-instagram-line"></i>
@@ -278,7 +278,7 @@
               </div>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
-              <h5 class="mb-0 text-white">LEARN MORE</h5>
+              <h5 class="mb-0">LEARN MORE</h5>
               <div class="line"></div>
               <ul class="footer-box">
                 <li>
@@ -299,26 +299,26 @@
               </ul>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
-              <h5 class="mb-0 text-white">CONNECT</h5>
+              <h5 class="mb-0">CONNECT</h5>
               <div class="line"></div>
               <ul class="footer-box">
                 <li>
-                  <a href="./careers">Careers</a>
+                  <a href="./careers.html">Careers</a>
                 </li>
                 <li>
-                  <a href="./index.html#contact">Get In Touch</a>
+                  <a href="./index.html#contact">Contact</a>
                 </li>
               </ul>
             </div>
             <div class="footer-box col-lg-3 col-sm-6">
-              <h5 class="mb-0 text-white">CONTACT</h5>
+              <h5 class="mb-0">CONTACT</h5>
               <div class="line"></div>
               <ul class="footer-box">
                 <li>320 Main Street, Suite 200</li>
                 <li>Carbondale, CO 81623</li>
                 <li>970-963-6363</li>
-                <li>office@aspenvalleylaw.com</li>
-                <li>www.aspenvalleylaw.com</li>
+                <li>office@neileymorris.com</li>
+                <li>www.neileymorris.com</li>
               </ul>
             </div>
           </div>
@@ -329,10 +329,10 @@
           <div class="row g-4 justify-content-between">
             <div class="col-auto">
               <p class="mb-0">
-                © Copyright Aspen Valley Law. All Rights Reserved.
+                © Copyright Neiley & Morris. All Rights Reserved.
               </p>
               <p class="mb-0">
-                Aspen Valley Law, P. C. is not affiliated with any governmental
+                Neiley & Morris LLC is not affiliated with any governmental
                 entity.
               </p>
             </div>
@@ -350,7 +350,6 @@
         </div>
       </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
