--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./assets/images/FAVI.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favi24.ico" />
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
@@ -132,27 +132,27 @@
           <div class="col-lg-5 about-dets" data-aos="fade-down" data-aos-delay="150">
             <h1 class="abouth1">A team you can trust.</h1>
             <div class="d-flex pt-4 mb-3">
-              <div class="iconbox me-4 ">
+              <!-- <div class="iconbox me-4 ">
                 <i class="bi bi-diamond"></i>
-              </div>
+              </div> -->
               <div>
                 <h5 class="abouth5">Advocacy</h5>
                 <p>We work with our clients directly to understand their needs and goals. We advocate for justice and resolution that is client-focused. </p>
               </div>
             </div>
             <div class="d-flex mb-3">
-              <div class="iconbox me-4 ">
+              <!-- <div class="iconbox me-4 ">
                 <i class="bi bi-diamond"></i>
-              </div>
+              </div> -->
               <div>
                 <h5 class="abouth5">Preparedness</h5>
                 <p>We prepare our cases and clients by conducting early document review, investigation, and hands-on case management. From the outset, we familiarize ourselves with the legal issues and challenges that our clients face, and we are prepared to tackle them—big or small.</p>
               </div>
             </div>
             <div class="d-flex">
-              <div class="iconbox me-4 ">
+              <!-- <div class="iconbox me-4 ">
                 <i class="bi bi-diamond"></i>
-              </div>
+              </div> -->
               <div>
                 <h5 class="abouth5">Integrity</h5>
                 <p>
@@ -330,11 +330,10 @@
               Post Decree Contempt and Enforcement<br>
               Modification of Spousal Support<br>
               Prenuptial and Postnuptial Marital Agreements<br>
-              <div class="iconbox  ">
+              <div class="iconbox" style="visibility: hidden">
                 <i class="bi bi-diamond pb-4" style="margin: 0"></i>
               </div>
-              <h6>Parenting Rights</h6>
-              <div class="line"></div>
+              
               <h6>Parenting Rights</h6>
               <div class="line"></div>
               Allocation of Parental Rights<br>
@@ -346,14 +345,14 @@
               Relocation and Removal<br>
               Modification of Child Support<br>
               Modification of Parenting Plan<br>
-              <div class="iconbox  pb-4">
+              <div class="iconbox  pb-4" style="visibility: hidden">
                 <i class="bi bi-diamond" style="margin: 0"></i>
               </div>
               <h6>General</h6>
               <div class="line"></div>
               Civil Protection Orders<br>
               Appeals<br>
-              <div class="iconbox  pb-4">
+              <div class="iconbox" style="visibility: hidden">
                 <i class="bi bi-diamond" style="margin: 0"></i>
               </div>
             </div>
@@ -381,7 +380,7 @@
               Parks and Wildlife Violations<br>
               Traffic Offenses<br>
               Probation Violations<br>
-              <div class="iconbox  ">
+              <div class="iconbox" style="visibility: hidden">
                 <i class="bi bi-diamond pb-4" style="margin: 0"></i>
               </div>
               
@@ -391,7 +390,7 @@
               <h6>Civil Protection Orders</h6>
               <h6>Criminal Appeals</h6>
               <div class="line"></div>
-              <div class="iconbox  pb-4">
+              <div class="iconbox" style="visibility: hidden">
                 <i class="bi bi-diamond" style="margin: 0"></i>
               </div>
             </div>
