--- a/attorneys.html
+++ b/attorneys.html
@@ -19,7 +19,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./assets/images/favi24.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favi24-2.ico" />
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
