--- a/careers.html
+++ b/careers.html
@@ -96,7 +96,7 @@
             <img src="./assets/images/flower.jpg" alt="about" />
           </div>
           <div
-            class="col-lg-5 bg-light"
+            class="col-lg-5 career-blurb"
             data-aos="fade-down"
             data-aos-delay="150"
           >
