--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               </div>
               <div class="speaker-content">
                 <h4>Read More About </h4>
-                <h4>Sarah M. Neiley</h4>
+                <h4 class="hover-name">Sarah M. Neiley</h4>
               </div>
             </div>
             <div class="name-box">
@@ -210,7 +210,7 @@
               </div>
               <div class="speaker-content">
                 <h4>Read More About</h4> 
-                <h4>Mackenzie J. Morris</h4>
+                <h4 class="hover-name">Mackenzie J. Morris</h4>
               </div>
             </div>
             <div class="name-box">
@@ -229,7 +229,7 @@
               </div>
               <div class="speaker-content">
                 <h4>Read More About </h4>
-                <h4>Zoe M. Dotson</h4>
+                <h4 class="hover-name">Zoe M. Dotson</h4>
               </div>
             </div>
             <div class="name-box">
@@ -248,7 +248,7 @@
               </div>
               <div class="speaker-content">
                 <h4>Read More About </h4>
-                <h4>Marianne Leonardi</h4>
+                <h4 class="hover-name">Marianne Leonardi</h4>
               </div>
             </div>
             <div class="name-box">
