teams page complete

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ASPEN VALLEY LAW</title>
+    <title>NEILEY & MORRIS</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
@@ -213,9 +213,9 @@
         </div>
         <div class="row g-4 text-center">
           <div class="col-md-3" data-aos="fade-down" data-aos-delay="150">
-            <div class="speaker image-zoom">
+            <div class="speaker image-zoom sarah">
               <div class="image-zoom-wrapper">
-                <a href="./attorneys.html#sarah">
+                <a href="./attorneys.html#sarah-link">
                   <img src="./assets/images/sarah1.jpg" />
                 </a>
               </div>
@@ -232,10 +232,13 @@
           </div>
 
           <div class="col-md-3" data-aos="fade-down" data-aos-delay="250">
-            <div class="speaker image-zoom">
+            <div class="speaker image-zoom mack">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#mackenzie">
-                  <img src="./assets/images/mack1.jpg" />
+                  <img
+                    src="./assets/images/mackenzie1.jpg"
+                    style="transform: scale(1.15)"
+                  />
                 </a>
               </div>
               <div class="speaker-content">
@@ -251,10 +254,13 @@
           </div>
 
           <div class="col-md-3" data-aos="fade-down" data-aos-delay="350">
-            <div class="speaker image-zoom">
+            <div class="speaker image-zoom zoe">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#zoe">
-                  <img src="./assets/images/zoe1.jpg" />
+                  <img
+                    src="./assets/images/zoe1.jpg"
+                    style="transform: scale(1.2)"
+                  />
                 </a>
               </div>
               <div class="speaker-content">
@@ -269,10 +275,13 @@
           </div>
 
           <div class="col-md-3" data-aos="fade-down" data-aos-delay="450">
-            <div class="speaker image-zoom">
+            <div class="speaker image-zoom mar">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#maryann">
-                  <img src="./assets/images/mar3.jpg" />
+                  <img
+                    src="./assets/images/mar4.jpg"
+                    style="transform: scale(1.2)"
+                  />
                 </a>
               </div>
               <div class="speaker-content">
