--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NEILEY & MORRIS</title>
+    <link rel="icon" href="./assets/images/favi24.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
@@ -24,7 +25,6 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./assets/images/favi24-2.ico" />
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
@@ -126,7 +126,7 @@
               <p>
                 Neiley & Morris is a boutique law firm representing clients in
                 matters of Family Law and Criminal Defense. We provide a team of
-                attorneys and staff who have extensive trial, evidentiary, and
+                attorneys and staff who has extensive trial, evidentiary, and
                 negotiation experience. Clients of Neiley & Morris receive
                 reasoned legal advice and zealous advocacy as we help them
                 navigate complex and difficult legal matters.
