--- a/attorneys.html
+++ b/attorneys.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NEILEY & MORRIS</title>
+    <link rel="icon" href="./assets/images/favi24.ico" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
@@ -19,7 +20,6 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./assets/images/favi24-2.ico" />
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
@@ -187,6 +187,7 @@
             legal representation.
           </p>
           <div
+            class="dets-row"
             style="
               display: flex;
               justify-content: space-around;
@@ -345,6 +346,7 @@
             world, including a 130- mile trek to Everest Base Camp.
           </p>
           <div
+            class="dets-row"
             style="
               display: flex;
               justify-content: space-between;
