--- a/attorneys.html
+++ b/attorneys.html
@@ -117,46 +117,47 @@
             <span
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
             >
-              Sarah represents clients in sophisticated family matters
+              Sarah represents clients in sophisticated Family Law Matters
             </span>
             involving the analysis and litigation of high asset marital estates,
             property and business valuations, complex incomes, challenging
             parenting issues, and prenuptial and postnuptial marital agreements.
-            Though Sarah represents clients with sophisticated legal issues, she
+            Though Sarah represents clients with complicated legal issues, she
             is equally passionate about her less complex cases.
             <strong
-              >Family relationships and family systems are fundamental for
-              individual wellness and success. For this reason, the legal issues
-              that affect families are critically important.
+              >Sarah believes family relationships and family systems are
+              fundamental for individual wellness and success. For this reason,
+              having trusted legal counsel is critical.
             </strong>
           </p>
 
           <p>
             Sarah understands the importance of her clients’ legal matters and
-            how her work has long- lasting impacts in their lives and the lives
+            how her work has long-lasting impacts in their lives and the lives
             of their families. She has an in-depth understanding of the legal
-            issues her clients face and the experience to navigate them soundly
-            by engaging in high-level analysis, strategizing, and
-            problem-solving. Sarah guides her clients to make informed and
-            carefully-considered decisions.
+            issues her clients face and the experience to navigate them. Sarah
+            guides her clients to make informed and carefully considered
+            decisions.
             <strong
-              >In family law, resolution comes in many forms and looks different
-              for every client.</strong
+              >Resolution comes in many forms and looks different for every
+              client.</strong
             >
             Sarah prides herself on listening to her clients and understanding
             their needs and goals to inform a strategy of client-oriented
             resolution. She encourages her clients to reach out-of-court
             settlements when possible and enjoys working with her clients and
-            opposing parties to find creative resolutions.
+            opposing parties to find creative solutions.
           </p>
 
           <p>
-            Sarah believes it is critical to provide her clients with direct and
-            honest advice about where to focus their time, energy, and money in
-            litigating family law issues. Most of Sarah’s cases settle through
-            negotiated agreements. However, when settlement is not possible,
-            Sarah fervently advocates for her clients in court where she is a
-            fierce opponent due to her extensive career as a trial attorney.  
+            <strong>
+              Sarah provides her clients with direct and honest advice</strong
+            >
+            about where to focus their time, energy, and money in litigating
+            Family Law issues. Most of Sarah’s cases settle through negotiated
+            agreements. However, when settlement is not possible, Sarah
+            fervently advocates for her clients in court where she is a fierce
+            opponent due to her extensive career as a trial attorney.  
           </p>
 
           <p>
@@ -165,11 +166,11 @@
             districts. She successfully managed and prosecuted hundreds, if not
             thousands, of criminal matters ranging from simple misdemeanors to
             felony offenses. After leaving the government, Sarah entered private
-            practice and worked for one of the largest law firms on the Western
-            Slope of Colorado as an associate in the firm’s family law and civil
-            litigation departments. After starting a family of her own and
-            recognizing her true passion for family law, Sarah founded and
-            managed her own family law firm for five years before forming Neiley
+            practice and worked for a large law firm with offices throughout the
+            state of Colorado as a Family Law and Civil Litigation associate.
+             After recognizing her unique qualifications and exceptional
+            strength as a Family Law litigator, Sarah founded and managed her
+            own Family Law legal practice for five years before forming Neiley
             &amp; Morris.
           </p>
 
@@ -177,23 +178,16 @@
             Sarah has personally tried over 60 cases, and she has taken even
             more cases to evidentiary hearings and hearings on legal
             argument. Due to her experience working in various jurisdictions and
-            her unique background in family, civil, and criminal law,
+            her background in Family Law, Civil Litigation, and Criminal Law,
             <strong>
-              Sarah has the skillset and acumen to effectively manage, resolve,
+              Sarah has the skill set and acumen to effectively manage, resolve,
               and litigate her client's legal issues.</strong
             >
             Sarah and the legal team at Neiley &amp; Morris are dedicated to
-            providing family law litigants with compassionate and efficient
+            providing Family Law litigants with compassionate and efficient
             legal representation.
           </p>
-          <div
-            class="dets-row"
-            style="
-              display: flex;
-              justify-content: space-around;
-              margin-top: 75px;
-            "
-          >
+          <div class="dets-row">
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="100">
               <h3>Areas of Practice</h3>
               <div class="line"></div>
@@ -310,7 +304,7 @@
             attempted homicide and sex assaults, to DUIs and minor drug
             offenses. This background has sharpened her litigation and
             negotiation skills, making her a compassionate and effective
-            advocate in family law as well. Most of Mackenzie’s family law cases
+            advocate in Family Law as well. Most of Mackenzie’s Family Law cases
             result in efficient settlements, as
             <strong
               >she strives to find creative solutions that lead to equitable
@@ -323,7 +317,7 @@
           <p>
             Mackenzie is consistently praised by her clients for her attention
             to detail and her ability to provide comfort and support while her
-            clients navigate the emotional complexities of family law. Mackenzie
+            clients navigate the emotional complexities of Family Law. Mackenzie
             earned her law degree from the University of Denver Sturm College of
             Law, where she was honored as the Outstanding Student Attorney in
             Criminal Defense from the nationally ranked criminal defense clinic.
@@ -495,7 +489,7 @@
 
         <!-- zoe -->
 
-        <div id="zoe" class="row lawyer" style="margin-top: 0px">
+        <!-- <div id="zoe" class="row lawyer" style="margin-top: 0px">
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
@@ -507,9 +501,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div
+        <!-- <div
           id="zoe-bio"
           class="row lawyer bio g-4"
           data-aos="fade-down"
@@ -540,7 +534,7 @@
             knowledge and resourcefulness are great assets to our firm and
             clients.
           </p>
-        </div>
+        </div> -->
 
         <!-- mar -->
 
@@ -568,22 +562,21 @@
             <span
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
             >
-              Mary Ann is one of the firm’s paralegals in both Family and
-              Criminal Law matters,
+              Mary Ann is one of the firm’s paralegals in both Family Law and
+              Criminal Defense matters.
             </span>
-            and she also provides administrative support to the firm and
-            clients. Mary Ann is integral to our Legal Team and the
-            detail-oriented advocacy and representation that our clients
-            receive. Not only is Mary Ann an experienced and consummate
-            professional, she offers a steady, guiding hand to our Legal Team
-            and clients. Clients of Neiley & Morris receive the utmost care and
-            attention when working with Mary Ann. Mary Ann has over 30 years of
-            experience working with attorneys in the Roaring Fork Valley,
-            including including 12 years of experience working at a
-            distinguished family law firm in Aspen. Mary Ann is passionate about
-            her work. She is equally passionate about working as an animal
-            rescue volunteer and has been a longtime volunteer with Colorado
-            Animal Rescue based in Glenwood Springs.
+            She also provides administrative support to the firm and clients.
+            Mary Ann is integral to our Legal Team and the detail-oriented
+            advocacy and representation that our clients receive. Not only is
+            Mary Ann an experienced and consummate professional, she offers a
+            steady, guiding hand to our Legal Team and clients. Clients of
+            Neiley & Morris receive the utmost care and attention when working
+            with Mary Ann. She has over 30 years of experience working with
+            attorneys in the Roaring Fork Valley, including 12 years of
+            experience working at a distinguished Family Law firm in Aspen. Mary
+            Ann is passionate about her work. She is equally passionate about
+            volunteering at animal rescue organizations and has been a longtime
+            volunteer with Colorado Animal Rescue based in Glenwood Springs.
           </p>
         </div>
       </div>
