--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <h1 class="display-4 fw-semibold">
                 RESOLUTION-DRIVEN LEGAL REPRESENTATION
               </h1>
-              <div class="line" style="background-color: var(--c-light2)"></div>
+              <div class="line" style="background-color: var(--c-brand)"></div>
               <p>
                 Neiley & Morris is a boutique law firm representing clients in
                 matters of Family Law and Criminal Defense. We provide a team of
@@ -212,7 +212,7 @@
           </div>
         </div>
         <div class="row g-4 text-center">
-          <div class="col-md-3" data-aos="fade-down" data-aos-delay="150">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom sarah">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#sarah-link">
@@ -227,11 +227,11 @@
             <div class="name-box">
               <h4>Sarah M. Neiley</h4>
               <h4 class="mb-0 role">Managing Partner</h4>
-              <h5 class="mb-0">Family Law</h5>
+              <!-- <h5 class="mb-0">Family Law</h5> -->
             </div>
           </div>
 
-          <div class="col-md-3" data-aos="fade-down" data-aos-delay="250">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="speaker image-zoom mack">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#mackenzie">
@@ -249,11 +249,11 @@
             <div class="name-box">
               <h4>Mackenzie J. Morris</h4>
               <h4 class="mb-0 role">Partner</h4>
-              <h5 class="mb-0">Criminal Defense & <br />Family Law</h5>
+              <!-- <h5 class="mb-0">Criminal Defense & <br />Family Law</h5> -->
             </div>
           </div>
 
-          <div class="col-md-3" data-aos="fade-down" data-aos-delay="350">
+          <!-- <div class="col-md-3" data-aos="fade-down" data-aos-delay="350">
             <div class="speaker image-zoom zoe">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#zoe">
@@ -272,9 +272,9 @@
               <h4>Zoe M. Dotson</h4>
               <h4 class="mb-0 role">Paralegal</h4>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-md-3" data-aos="fade-down" data-aos-delay="450">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="450">
             <div class="speaker image-zoom mar">
               <div class="image-zoom-wrapper">
                 <a href="./attorneys.html#mar">
@@ -371,14 +371,13 @@
               <!-- <h6 class="sub-title">We represent Family Law clients involving the following legal matters:</h6> -->
               <h6>Divorce and Legal Separation</h6>
               <div class="line"></div>
-              High-Asset and Complex Estates<br />
+              High-Asset and Complex Marital Estates<br />
               Valuation and Allocation of Real Estate and Business Interests<br />
               Same-Sex Divorce and Legal Separation<br />
-              Spousal Support<br />
+              Spousal Support and Modifications<br />
               Executive Compensation<br />
               Common Law Marriage<br />
-              Post Decree Contempt and Enforcement<br />
-              Modification of Spousal Support<br />
+              Post-Decree Contempt and Enforcement<br />
               Prenuptial and Postnuptial Marital Agreements<br />
               <div class="iconbox" style="visibility: hidden">
                 <i class="bi bi-diamond pb-4" style="margin: 0"></i>
