mackenzie bio update

--- a/attorneys.html
+++ b/attorneys.html
@@ -270,74 +270,54 @@
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
             >
               Mackenzie is a dedicated Criminal Defense and Family Law Attorney </span
-            >who prioritizes client-centered representation, focusing on
-            long-term outcomes that align with her clients' needs. With
-            extensive experience in complex litigation, she has successfully
-            represented clients in numerous trials and hearings throughout
-            Colorado. While she values efficient resolutions and settlements
-            when appropriate, her track record showcases her commitment to
-            achieving favorable results in high-stakes cases.
+            >known for her strong advocacy and client-focused representation.
+            Mackenzie guides clients through the legal process with clear,
+            practical counsel and an unrelenting commitment to achieving
+            favorable outcomes tailored to her clients’ individual needs.
+            Mackenzie’s criminal defense practice is built on years of courtroom
+            experience and a deep understanding of the Colorado criminal justice
+            system. As a former Deputy Public Defender for the State of
+            Colorado, Mackenzie has represented clients charged with attempted
+            homicide and sexual assault, to DUIs, domestic violence and minor
+            drug offenses. Mackenzie is passionate about defending her clients’
+            constitutional rights by challenging unlawful arrests, suppressing
+            illegally obtained evidence, and litigating issues of government
+            misconduct. Mackenzie works closely with each of her clients to
+            provide a comprehensible pathway forward and to establish litigation
+            strategies often resulting in pre-trial dismissals, significant
+            reductions in charges, or not-guilty verdicts at trial. Mackenzie
+            represents individuals charged with felony, misdemeanor, traffic,
+            and municipal offenses across the State of Colorado, as well as
+            actions initiated by the Colorado Department of Motor Vehicles. In
+            her family law practice, Mackenzie serves as a steady and practical
+            advocate, offering a leading voice during some of the most
+            challenging times in her clients’ lives. Mackenzie’s focus in family
+            law is to resolve complex and high-conflict cases through creative
+            settlement strategies that protect her clients&#39; interests
+            long-term, while minimizing the emotional and financial toll
+            associated with family law matters. Mackenzie represents clients in
+            matters related to divorce, parenting rights and responsibilities,
+            and post-decree disputes.
 
             <br />
           </p>
 
           <p>
-            Mackenzie’s passion for criminal defense was ignited early in her
-            career when she joined a team of attorneys representing one of the
-            three inmates on Colorado’s Death Row.
-            <strong>
-              This pivotal experience fueled her dedication to defending the
-              constitutional rights of the accused and advocating against
-              systemic abuses within the criminal justice system.</strong
-            >
-            She approaches each case with thorough legal analysis, empowering
-            her clients to make informed decisions—whether negotiating a plea
-            agreement or mounting a robust defense in front of a jury.
-
-            <br />
-          </p>
-
-          <p>
-            Before entering private practice, Mackenzie served as a Deputy
-            Public Defender for the State of Colorado, where she represented
-            hundreds of individuals charged wigh a wide range of crimes, from
-            attempted homicide and sex assaults, to DUIs and minor drug
-            offenses. This background has sharpened her litigation and
-            negotiation skills, making her a compassionate and effective
-            advocate in Family Law as well. Most of Mackenzie’s Family Law cases
-            result in efficient settlements, as
-            <strong
-              >she strives to find creative solutions that lead to equitable
-              outcomes and minimize conflict for families.
-            </strong>
-
-            <br />
-          </p>
-
-          <p>
-            Mackenzie is consistently praised by her clients for her attention
-            to detail and her ability to provide comfort and support while her
-            clients navigate the emotional complexities of Family Law. Mackenzie
-            earned her law degree from the University of Denver Sturm College of
-            Law, where she was honored as the Outstanding Student Attorney in
-            Criminal Defense from the nationally ranked criminal defense clinic.
-            During her time in law school, she also received the Public Good
-            Distinction Award, the Reece Persuasive Writing Award, was the
-            recipient of two scholarships for trial advocacy, and served as
-            President of the Public Interest Law Group. Prior to her legal
-            studies, she earned a B.A. in Political Science and International
-            Studies from the University of Colorado and worked as a legislative
-            representative for a state-wide nonprofit.
-
-            <br />
-          </p>
-
-          <p>
-            Outside of her legal practice, Mackenzie is an avid outdoor
-            enthusiast. She enjoys mountain biking, fishing, snowboarding,
-            rafting, and is a dedicated hiker who has summited many of
-            Colorado’s 14ers. Mackenzie loves to travel and has hiked across the
-            world, including a 130- mile trek to Everest Base Camp.
+            Mackenzie earned her Juris Doctor from the University of Denver
+            Sturm College of Law, where she received the Outstanding Student
+            Attorney in Criminal Defense Award from the nationally ranked
+            criminal defense clinic. While in law school, Mackenzie also
+            received the Reece Persuasive Writing Award, the Public Good
+            Distinction Award, two elite scholarships for trial advocacy, and
+            she served as President of the Public Interest Law Group. Mackenzie
+            holds a B.A. in both Political Science and International Studies
+            from the University of Colorado. Prior to law school, Mackenzie
+            worked with a team of attorneys representing one of three inmates on
+            Colorado’s death row and was a legislative and policy coordinator
+            for a 501(c)(3) non-profit. Outside of her legal practice, Mackenzie
+            is an avid outdoors enthusiast who enjoys mountain biking, fishing,
+            snowboarding, rafting and has summited the majority of Colorado’s
+            14ers.
           </p>
           <div
             class="dets-row"
