--- a/attorneys.html
+++ b/attorneys.html
@@ -269,36 +269,54 @@
             <span
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
             >
-              Mackenzie is a dedicated Criminal Defense and Family Law Attorney </span
-            >known for her strong advocacy and client-focused representation.
+              Mackenzie is a dedicated Criminal Defense and Family Law Attorney
+            </span>
+            known for her strong advocacy and client-focused representation.
             Mackenzie guides clients through the legal process with clear,
             practical counsel and an unrelenting commitment to achieving
             favorable outcomes tailored to her clients’ individual needs.
-            Mackenzie’s criminal defense practice is built on years of courtroom
-            experience and a deep understanding of the Colorado criminal justice
-            system. As a former Deputy Public Defender for the State of
-            Colorado, Mackenzie has represented clients charged with attempted
-            homicide and sexual assault, to DUIs, domestic violence and minor
-            drug offenses. Mackenzie is passionate about defending her clients’
-            constitutional rights by challenging unlawful arrests, suppressing
-            illegally obtained evidence, and litigating issues of government
-            misconduct. Mackenzie works closely with each of her clients to
-            provide a comprehensible pathway forward and to establish litigation
+          </p>
+
+          <p>
+            <strong>
+              Mackenzie’s criminal defense practice is built on years of
+              courtroom experience and a deep understanding of the Colorado
+              criminal justice system.
+            </strong>
+            As a former Deputy Public Defender for the State of Colorado,
+            Mackenzie has represented clients charged with attempted homicide
+            and sexual assault, to DUIs, domestic violence and minor drug
+            offenses.
+            <strong>
+              Mackenzie is passionate about defending her clients’
+              constitutional rights by challenging unlawful arrests, suppressing
+              illegally obtained evidence, and litigating issues of government
+              misconduct.
+            </strong>
+            Mackenzie works closely with each of her clients to provide a
+            comprehensible pathway forward and to establish litigation
             strategies often resulting in pre-trial dismissals, significant
             reductions in charges, or not-guilty verdicts at trial. Mackenzie
             represents individuals charged with felony, misdemeanor, traffic,
             and municipal offenses across the State of Colorado, as well as
-            actions initiated by the Colorado Department of Motor Vehicles. In
-            her family law practice, Mackenzie serves as a steady and practical
-            advocate, offering a leading voice during some of the most
-            challenging times in her clients’ lives. Mackenzie’s focus in family
-            law is to resolve complex and high-conflict cases through creative
-            settlement strategies that protect her clients&#39; interests
-            long-term, while minimizing the emotional and financial toll
-            associated with family law matters. Mackenzie represents clients in
-            matters related to divorce, parenting rights and responsibilities,
-            and post-decree disputes.
+            actions initiated by the Colorado Department of Motor Vehicles.
+          </p>
 
+          <p>
+            <strong>
+              In her family law practice, Mackenzie serves as a steady and
+              practical advocate,
+            </strong>
+            &nbsp;offering a leading voice during some of the most challenging
+            times in her clients’ lives.
+            <strong>
+              Mackenzie’s focus in family law is to resolve complex and
+              high-conflict cases through creative settlement strategies that
+              protect her clients&#39; interests long-term, while minimizing the
+              emotional and financial toll associated with family law matters.
+            </strong>
+            Mackenzie represents clients in matters related to divorce,
+            parenting rights and responsibilities, and post-decree disputes.
             <br />
           </p>
 
@@ -311,13 +329,15 @@
             Distinction Award, two elite scholarships for trial advocacy, and
             she served as President of the Public Interest Law Group. Mackenzie
             holds a B.A. in both Political Science and International Studies
-            from the University of Colorado. Prior to law school, Mackenzie
-            worked with a team of attorneys representing one of three inmates on
-            Colorado’s death row and was a legislative and policy coordinator
-            for a 501(c)(3) non-profit. Outside of her legal practice, Mackenzie
-            is an avid outdoors enthusiast who enjoys mountain biking, fishing,
-            snowboarding, rafting and has summited the majority of Colorado’s
-            14ers.
+            from the University of Colorado.
+          </p>
+          <p>
+            Prior to law school, Mackenzie worked with a team of attorneys
+            representing one of three inmates on Colorado’s death row and was a
+            legislative and policy coordinator for a 501(c)(3) non-profit.
+            Outside of her legal practice, Mackenzie is an avid outdoors
+            enthusiast who enjoys mountain biking, fishing, snowboarding,
+            rafting and has summited the majority of Colorado’s 14ers.
           </p>
           <div
             class="dets-row"
