--- a/attorneys.html
+++ b/attorneys.html
@@ -67,7 +67,9 @@
               <a class="nav-link" href="#news">News</a>
             </li> -->
           </ul>
-          <a href="#contact" class="btn btn-brand ms-lg-3">Contact</a>
+          <a href="./index.html#contact" class="btn btn-brand ms-lg-3"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
