mary ann leonardi

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               </div>
             </div>
             <div class="name-box">
-              <h4>Marianne Leonardi</h4>
+              <h4>Mary Ann Leonardi</h4>
               <h4 class="mb-0 role">Paralegal</h4>
             </div>
           </div>
