mary ann leonardi

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               </div>
               <div class="speaker-content">
                 <h4>Read More About</h4>
-                <h4 class="hover-name">Marianne Leonardi</h4>
+                <h4 class="hover-name">Mary Ann Leonardi</h4>
               </div>
             </div>
             <div class="name-box">
