--- a/careers.html
+++ b/careers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ASPEN VALLEY LAW</title>
+    <title>NEILEY & MORRIS</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
@@ -82,11 +82,11 @@
             data-aos-delay="50"
           >
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">CAREERS AT AVL</h1>
+              <h1 class="display-4 fw-semibold">CAREERS AT NEILEY & MORRIS</h1>
               <div class="line"></div>
               <h4>
-                Aspen Valley Law, P.C. is rapidly expanding to meet growing
-                client demands.
+                Neiley & Morris is rapidly expanding to meet growing client
+                demands.
               </h4>
             </div>
           </div>
@@ -106,7 +106,7 @@
               aligned with the firm. We are currently open to taking on new
               attorneys into our firm with a wide range of expertise. We would
               love for you to contact us
-              <a href="mailto: office@aspenvalleylaw.com"> here</a> with your
+              <a href="mailto: office@neileymorris.com "> here</a> with your
               resume and information about yourself.
             </h5>
           </div>
