--- a/attorneys.html
+++ b/attorneys.html
@@ -253,7 +253,7 @@
               <div>
                 <div class="title-cont right">
                   <h1>Mackenzie J. Morris</h1>
-                  <h2>Managing Partner</h2>
+                  <h2>Partner</h2>
                 </div>
                 <img src="./assets/images/mackenzie-span.jpg" />
               </div>
