kenzies areas of practice

--- a/attorneys.html
+++ b/attorneys.html
@@ -350,20 +350,35 @@
             "
           >
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="100">
-              <h3>Areas of Practice</h3>
+              <h3 style="text-align: center">Areas of Practice</h3>
               <div class="line"></div>
+              <h5>Criminal Defense</h5>
               <p style="text-indent: 0">
                 • Felony & Misdemeanor Crimes
                 <br />
                 • Municipal Offenses
+                <!-- <br />
+                • Juvenile Offenses -->
                 <br />
-                • Juvenile Offenses
+                • Criminal Law Appeals
                 <br />
-                • Appeals
+                • Victim Representation
+              </p>
+              <h5>Family Law</h5>
+              <p style="text-indent: 0">
+                • Divorce and Legal Separation
+                <br />
+                • Post-Decree Enforcement Issues
+                <br />
+                • Parenting Rights
+                <br />
+                • Civil Protection Orders
+                <br />
+                • Family Law Appeals
               </p>
             </div>
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="150">
-              <h3>Education</h3>
+              <h3 style="text-align: center">Education</h3>
               <div class="line"></div>
               <p style="text-indent: 0">
                 • University of Denver Sturm College of Law,
@@ -383,7 +398,7 @@
               </p>
             </div>
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="200">
-              <h3>
+              <h3 style="text-align: center">
                 Memberships
                 <div class="line"></div>
               </h3>
